--- a/ProjektZPR/createnewtest.ui
+++ b/ProjektZPR/createnewtest.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>686</width>
-    <height>470</height>
+    <width>662</width>
+    <height>481</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>8</x>
-     <y>11</y>
+     <x>10</x>
+     <y>60</y>
      <width>66</width>
      <height>20</height>
     </rect>
@@ -34,11 +34,11 @@
     <string>Question</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="textEdit">
+  <widget class="QTextEdit" name="questionEdit">
    <property name="geometry">
     <rect>
-     <x>93</x>
-     <y>10</y>
+     <x>90</x>
+     <y>70</y>
      <width>441</width>
      <height>51</height>
     </rect>
@@ -51,11 +51,11 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_3">
+  <widget class="QPushButton" name="save">
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>20</y>
+     <y>90</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -67,10 +67,10 @@ p, li { white-space: pre-wrap; }
   <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>110</y>
-     <width>441</width>
-     <height>201</height>
+     <x>90</x>
+     <y>160</y>
+     <width>461</width>
+     <height>231</height>
     </rect>
    </property>
    <property name="currentIndex">
@@ -82,7 +82,7 @@ p, li { white-space: pre-wrap; }
     </attribute>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTextEdit" name="textEdit_2"/>
+      <widget class="QTextEdit" name="answerOpenEdit"/>
      </item>
     </layout>
    </widget>
@@ -90,155 +90,118 @@ p, li { white-space: pre-wrap; }
     <attribute name="title">
      <string>Close</string>
     </attribute>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>140</x>
-       <y>109</y>
-       <width>125</width>
-       <height>93</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QWidget" name="">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>0</y>
-       <width>371</width>
-       <height>171</height>
-      </rect>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
-       <widget class="QTextEdit" name="textEdit_4"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QTextEdit" name="textEdit_5"/>
-      </item>
-      <item row="2" column="0">
-       <widget class="QTextEdit" name="textEdit_6"/>
-      </item>
-      <item row="3" column="0">
-       <widget class="QTextEdit" name="textEdit_7"/>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QWidget" name="">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>55</width>
-       <height>171</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <widget class="QGroupBox" name="groupBox_2">
-        <property name="title">
-         <string/>
-        </property>
-        <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
-          <widget class="QRadioButton" name="radioButton">
-           <property name="text">
-            <string>a)</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="groupBox_3">
-        <property name="title">
-         <string/>
-        </property>
-        <widget class="QRadioButton" name="radioButton_5">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>10</y>
-           <width>33</width>
-           <height>17</height>
-          </rect>
+    <layout class="QGridLayout" name="gridLayout_3">
+     <item row="0" column="0" rowspan="2">
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QGroupBox" name="groupBox_2">
+         <property name="title">
+          <string/>
          </property>
-         <property name="text">
-          <string>b)</string>
-         </property>
+         <layout class="QGridLayout" name="gridLayout">
+          <item row="0" column="0">
+           <widget class="QRadioButton" name="rbA">
+            <property name="text">
+             <string>a)</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="groupBox_4">
-        <property name="title">
-         <string/>
-        </property>
-        <widget class="QRadioButton" name="radioButton_6">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>13</y>
-           <width>32</width>
-           <height>17</height>
-          </rect>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_3">
+         <property name="title">
+          <string/>
          </property>
-         <property name="text">
-          <string>c)</string>
-         </property>
+         <widget class="QRadioButton" name="rbB">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>10</y>
+            <width>33</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>b)</string>
+          </property>
+         </widget>
         </widget>
-        <zorder>groupBox_2</zorder>
-        <zorder>radioButton_6</zorder>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="groupBox">
-        <property name="title">
-         <string/>
-        </property>
-        <widget class="QRadioButton" name="radioButton_7">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>13</y>
-           <width>33</width>
-           <height>17</height>
-          </rect>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_4">
+         <property name="title">
+          <string/>
          </property>
-         <property name="text">
-          <string>d)</string>
-         </property>
+         <widget class="QRadioButton" name="rbC">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>13</y>
+            <width>32</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>c)</string>
+          </property>
+         </widget>
         </widget>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-    <zorder>label_3</zorder>
-    <zorder>radioButton_2</zorder>
-    <zorder>radioButton_3</zorder>
-    <zorder>radioButton_4</zorder>
-    <zorder>groupBox_3</zorder>
-    <zorder>groupBox_4</zorder>
-    <zorder>groupBox</zorder>
-    <zorder></zorder>
-    <zorder>groupBox_2</zorder>
-    <zorder>radioButton_6</zorder>
-    <zorder>textEdit_4</zorder>
-    <zorder>textEdit_5</zorder>
-    <zorder>textEdit_6</zorder>
-    <zorder>textEdit_7</zorder>
-    <zorder></zorder>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox">
+         <property name="title">
+          <string/>
+         </property>
+         <widget class="QRadioButton" name="rbD">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>13</y>
+            <width>33</width>
+            <height>17</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>d)</string>
+          </property>
+         </widget>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="0" column="1" rowspan="2" colspan="2">
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <widget class="QTextEdit" name="answerCloseAEdit"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QTextEdit" name="answerCloseBEdit"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QTextEdit" name="answerCloseCEdit"/>
+       </item>
+       <item row="3" column="0">
+        <widget class="QTextEdit" name="answerCloseDEdit"/>
+       </item>
+      </layout>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>120</y>
+     <y>180</y>
      <width>66</width>
      <height>20</height>
     </rect>
@@ -255,11 +218,11 @@ p, li { white-space: pre-wrap; }
     <string>Answer</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_4">
+  <widget class="QPushButton" name="help">
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>180</y>
+     <y>210</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -268,7 +231,7 @@ p, li { white-space: pre-wrap; }
     <string>Help</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -279,25 +242,25 @@ p, li { white-space: pre-wrap; }
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_4"/>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>320</y>
+     <y>410</y>
      <width>361</width>
      <height>51</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="back">
       <property name="text">
        <string>Back</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="next">
       <property name="text">
        <string>Next</string>
       </property>
@@ -305,23 +268,64 @@ p, li { white-space: pre-wrap; }
     </item>
    </layout>
   </widget>
-  <zorder>pushButton</zorder>
+  <widget class="QLabel" name="questionNumber">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>10</y>
+     <width>91</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Cambria</family>
+     <pointsize>33</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>1</string>
+   </property>
+  </widget>
+  <zorder>layoutWidget</zorder>
+  <zorder>layoutWidget</zorder>
   <zorder>label</zorder>
-  <zorder>textEdit</zorder>
-  <zorder>pushButton_2</zorder>
-  <zorder>pushButton_3</zorder>
+  <zorder>questionEdit</zorder>
+  <zorder>save</zorder>
   <zorder>tabWidget</zorder>
   <zorder>label_2</zorder>
-  <zorder>pushButton_4</zorder>
-  <zorder>textEdit_4</zorder>
+  <zorder>help</zorder>
+  <zorder>questionNumber</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
-  <tabstop>pushButton</tabstop>
-  <tabstop>pushButton_2</tabstop>
-  <tabstop>pushButton_3</tabstop>
-  <tabstop>textEdit</tabstop>
+  <tabstop>next</tabstop>
+  <tabstop>back</tabstop>
+  <tabstop>save</tabstop>
+  <tabstop>questionEdit</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>next</sender>
+   <signal>clicked()</signal>
+   <receiver>CreateNewTest</receiver>
+   <slot>nextQuestion()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>428</x>
+     <y>345</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>475</x>
+     <y>374</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>nextQuestion()</slot>
+ </slots>
 </ui>
