--- a/ProjektZPR/projektzpr.ui
+++ b/ProjektZPR/projektzpr.ui
@@ -1,162 +1,167 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-  <class>ProjektZPRClass</class>
-  <widget class="QMainWindow" name="ProjektZPRClass">
+ <class>ProjektZPRClass</class>
+ <widget class="QMainWindow" name="ProjektZPRClass">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>600</width>
+    <height>400</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>ProjektZPR</string>
+  </property>
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QLabel" name="label">
     <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>600</width>
-        <height>400</height>
-      </rect>
+     <rect>
+      <x>90</x>
+      <y>0</y>
+      <width>441</width>
+      <height>131</height>
+     </rect>
     </property>
-    <property name="windowTitle">
-      <string>ProjektZPR</string>
+    <property name="font">
+     <font>
+      <family>Edwardian Script ITC</family>
+      <pointsize>52</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
-    <widget class="QWidget" name="centralWidget">
-      <widget class="QPushButton" name="pushButton">
-        <property name="geometry">
-          <rect>
-            <x>170</x>
-            <y>160</y>
-            <width>75</width>
-            <height>23</height>
-          </rect>
-        </property>
-        <property name="text">
-          <string>PushButton</string>
-        </property>
-      </widget>
-    </widget>
-    <widget class="QMenuBar" name="menuBar">
-      <property name="geometry">
-        <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>600</width>
-          <height>21</height>
-        </rect>
-      </property>
-      <widget class="QMenu" name="menuFile">
-        <property name="title">
-          <string>File</string>
-        </property>
-        <addaction name="actionStart"/>
-        <addaction name="actionStop"/>
-        <addaction name="actionQuit"/>
-      </widget>
-      <widget class="QMenu" name="menuCreate">
-        <property name="title">
-          <string>Create</string>
-        </property>
-        <addaction name="actionNew_Course"/>
-      </widget>
-      <addaction name="menuFile"/>
-      <addaction name="menuCreate"/>
-    </widget>
-    <widget class="QToolBar" name="mainToolBar">
-      <attribute name="toolBarArea">
-        <enum>TopToolBarArea</enum>
-      </attribute>
-      <attribute name="toolBarBreak">
-        <bool>false</bool>
-      </attribute>
-    </widget>
-    <widget class="QStatusBar" name="statusBar"/>
-    <action name="actionStart">
-      <property name="text">
-        <string>Start</string>
-      </property>
-    </action>
-    <action name="actionStop">
-      <property name="text">
-        <string>Stop</string>
-      </property>
-    </action>
-    <action name="actionQuit">
-      <property name="text">
-        <string>Quit</string>
-      </property>
-    </action>
-    <action name="actionNew_Course">
-      <property name="text">
-        <string>New Course</string>
-      </property>
-    </action>
+    <property name="text">
+     <string>Witaj w Supermemo </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>330</y>
+      <width>181</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Autors: Michał Daniluk &amp; Piotr Małecki</string>
+    </property>
+   </widget>
   </widget>
-  <layoutdefault spacing="6" margin="11"/>
-  <resources>
-    <include location="projektzpr.qrc"/>
-  </resources>
-  <connections>
-    <connection>
-      <sender>actionQuit</sender>
-      <signal>triggered()</signal>
-      <receiver>ProjektZPRClass</receiver>
-      <slot>close()</slot>
-      <hints>
-        <hint type="sourcelabel">
-          <x>-1</x>
-          <y>-1</y>
-        </hint>
-        <hint type="destinationlabel">
-          <x>299</x>
-          <y>199</y>
-        </hint>
-      </hints>
-    </connection>
-    <connection>
-      <sender>pushButton</sender>
-      <signal>clicked()</signal>
-      <receiver>ProjektZPRClass</receiver>
-      <slot>pushButtonTest()</slot>
-      <hints>
-        <hint type="sourcelabel">
-          <x>205</x>
-          <y>200</y>
-        </hint>
-        <hint type="destinationlabel">
-          <x>228</x>
-          <y>247</y>
-        </hint>
-      </hints>
-    </connection>
-    <connection>
-      <sender>actionStart</sender>
-      <signal>triggered()</signal>
-      <receiver>ProjektZPRClass</receiver>
-      <slot>start()</slot>
-      <hints>
-        <hint type="sourcelabel">
-          <x>-1</x>
-          <y>-1</y>
-        </hint>
-        <hint type="destinationlabel">
-          <x>299</x>
-          <y>199</y>
-        </hint>
-      </hints>
-    </connection>
-    <connection>
-      <sender>actionNew_Course</sender>
-      <signal>triggered()</signal>
-      <receiver>ProjektZPRClass</receiver>
-      <slot>newTest()</slot>
-      <hints>
-        <hint type="sourcelabel">
-          <x>-1</x>
-          <y>-1</y>
-        </hint>
-        <hint type="destinationlabel">
-          <x>299</x>
-          <y>199</y>
-        </hint>
-      </hints>
-    </connection>
-  </connections>
-  <slots>
-    <slot>pushButtonTest()</slot>
-    <slot>start()</slot>
-    <slot>newTest()</slot>
-  </slots>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>600</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionStart"/>
+    <addaction name="actionStop"/>
+    <addaction name="actionQuit"/>
+   </widget>
+   <widget class="QMenu" name="menuCreate">
+    <property name="title">
+     <string>Create</string>
+    </property>
+    <addaction name="actionNew_Course"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuCreate"/>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionStart">
+   <property name="text">
+    <string>Start</string>
+   </property>
+  </action>
+  <action name="actionStop">
+   <property name="text">
+    <string>Stop</string>
+   </property>
+  </action>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+  </action>
+  <action name="actionNew_Course">
+   <property name="text">
+    <string>New Course</string>
+   </property>
+  </action>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <resources>
+  <include location="projektzpr.qrc"/>
+ </resources>
+ <connections>
+  <connection>
+   <sender>actionQuit</sender>
+   <signal>triggered()</signal>
+   <receiver>ProjektZPRClass</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>299</x>
+     <y>199</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionStart</sender>
+   <signal>triggered()</signal>
+   <receiver>ProjektZPRClass</receiver>
+   <slot>start()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>299</x>
+     <y>199</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionNew_Course</sender>
+   <signal>triggered()</signal>
+   <receiver>ProjektZPRClass</receiver>
+   <slot>newTest()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>299</x>
+     <y>199</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>pushButtonTest()</slot>
+  <slot>start()</slot>
+  <slot>newTest()</slot>
+ </slots>
 </ui>
