--- a/ProjektZPR/startmenu.ui
+++ b/ProjektZPR/startmenu.ui
@@ -26,7 +26,7 @@
     <string>Dostępne Kursy</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -42,7 +42,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="start">
+       <widget class="QPushButton" name="choose">
         <property name="text">
          <string>Wybierz</string>
         </property>
@@ -59,12 +59,8 @@
     </item>
    </layout>
   </widget>
+  <zorder>layoutWidget</zorder>
   <zorder>label</zorder>
-  <zorder>coursesList</zorder>
-  <zorder>delete_2</zorder>
-  <zorder>start</zorder>
-  <zorder>pushButton_3</zorder>
-  <zorder>start</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
