--- a/ProjektZPR/startmenu.ui
+++ b/ProjektZPR/startmenu.ui
@@ -49,7 +49,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="delete_2">
+       <widget class="QPushButton" name="deleteButton">
         <property name="text">
          <string>Usun</string>
         </property>
